--- a/index.org
+++ b/index.org
@@ -3,8 +3,8 @@
 #+LANGUAGE:  en
 #+EMAIL:     carsten at orgmode dot org
 #+OPTIONS:   H:3 num:nil toc:2 \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-
-#+HTML:  <BASE href="http://orgmode.org/index.html">
+#+STYLE: <base href="http://orgmode.org/index.html" />
+#+STYLE: <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
 
 *Org - an Emacs Mode for Notes, Project Planning, and Authoring*
@@ -22,16 +22,16 @@ system.
   </td>
 <td>
 
-<h3 align=center>Vote for
+<h3 style="text-align:center;">Vote for
   Org-mode</h3><span style="font-size: 80%;">Org-mode is a finalist in the
   2009 Sourceforge Community Choice Awards in the final category <i>Most
   Likely to Change the Way you do Everything</i>.  This is a fantastic
   opportunity to make more people aware of this package.  Please
   <a href="http://sf.net/awards/cca/badge_img.php?f=401">go vote for Org-mode.</a>
-<a href="http://sf.net/community/cca09/vote/?f=401"></br>
-  <img border=0 src="http://sf.net/awards/cca/badge_img.php?f=401" style="vertical-align:top;">
+<a href="http://sf.net/community/cca09/vote/?f=401"><br />
+  <img src="http://sf.net/awards/cca/badge_img.php?f=401" style="border-style:none;vertical-align:top;" alt="" />
 </a>
-
+</span>
 </td>
   </tr>
   <tr>
@@ -41,24 +41,26 @@ system.
   <td style="vertical-align:bottom;">
   <div style="float:bottom; border:0px solid black; padding:3px
   vertical-align:bottom;">
-  <h3 align=center>Donations</h3>
+  <h3 style="text-align:center;">Donations</h3>
   <span style="font-size: 80%;">
   If you are looking for <a
   href="http://thread.gmane.org/gmane.emacs.orgmode/14209">a way to say
   "thank you"</a>, or if you'd like to
   support the future development of Org-mode with a donation, use the
   button below.</span>
-  <br>
-  <hr>
+  <br />
+  <hr />
   <form  style="float:right;" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-  <input type="hidden" name="cmd" value="_xclick">
-  <input type="hidden" name="business" value="carsten.dominik@gmail.com">
-  <input type="hidden" name="item_name" value="Donate to Org-mode">
-  <input type="hidden" name="currency_code" value="USD">
+  <div>
+  <input type="hidden" name="cmd" value="_xclick" />
+  <input type="hidden" name="business" value="carsten.dominik@gmail.com" />
+  <input type="hidden" name="item_name" value="Donate to Org-mode" />
+  <input type="hidden" name="currency_code" value="USD" />
   <input type="hidden" name="lc" value="US"/>
-  <input type="hidden" name="amount">
-  <input type="image" align="center"
-  src="http://www.paypal.com/en_US/i/btn/x-click-but04.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+  <input type="hidden" name="amount" />
+  <input type="image" style="text-align:right;margin-left:auto;margin-right:0px;border-style:none;"
+  src="http://www.paypal.com/en_US/i/btn/x-click-but04.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!" />
+  </div>
   </form>
   </div>
   </td>
@@ -183,11 +185,11 @@ the latest git version.
      [[news://news.gmane.org/gmane.emacs.orgmode][newsreader]].
 
 #+BEGIN_HTML
-<li><form method="get" action="http://search.gmane.org/">
-<input type="text" name="query">
-<input type="hidden" name="group" value="gmane.emacs.orgmode">
-<input type="submit" value="Search gmane.emacs.orgmode">
-</form>
+</li><li><form method="get" action="http://search.gmane.org/"><div>
+<input type="text" name="query" />
+<input type="hidden" name="group" value="gmane.emacs.orgmode" />
+<input type="submit" value="Search gmane.emacs.orgmode" />
+</div></form>
 #+END_HTML
 
 ** Worg
