--- a/index.org
+++ b/index.org
@@ -14,8 +14,8 @@ planning, and authoring with a fast and effective plain-text
 system.
 
 #+begin_html
-  <!-- Add a fake image and use a CSS class to make it linkable -->
-  <a href="/"><img src="http://orgmode.org/img/spacer.gif" class="logo-link" /></a>
+  <!-- The logo links to the root of the website -->
+  <a href="/"><img src="http://orgmode.org/img/org-mode-unicorn.png" class="logo-link" /></a>
   <table width="100%">
   <tr>
   <td rowspan="2">
