--- a/index.org
+++ b/index.org
@@ -102,9 +102,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-04-19 Sun>: Release 6.26
 - <2009-04-01 Wed>: Release 6.25
 
-* Current Version (6.28c)
+* Current Version (6.28d)
 
-The current version is 6.28c.  To see what has changed in recent
+The current version is 6.28d.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -117,7 +117,7 @@ behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.28c.zip][zip file]] or [[file:org-6.28c.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.28d.zip][zip file]] or [[file:org-6.28d.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
