--- a/index.org
+++ b/index.org
@@ -42,7 +42,7 @@
     2009 Sourceforge Community Choice Awards in the final category <i>Most
     Likely to Change the Way you do Everything</i>.  This is a fantastic
     opportunity to make more people aware of this package.  Please
-    <a href="http://sf.net/awards/cca/badge_img.php?f=401">go vote for Org-mode.</a>
+    <a href="http://sf.net/community/cca09/vote/?f=401">go vote for Org-mode.</a>
   </span>
   </td>
     </tr>
@@ -110,9 +110,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-04-19 Sun>: Release 6.26
 - <2009-04-01 Wed>: Release 6.25
 
-* Current Version (6.28d)
+* Current Version (6.28e)
 
-The current version is 6.28d.  To see what has changed in recent
+The current version is 6.28e.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -125,7 +125,7 @@ behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.28d.zip][zip file]] or [[file:org-6.28d.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.28e.zip][zip file]] or [[file:org-6.28e.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
