Fix logo stuff on website

--- a/Changes.org
+++ b/Changes.org
@@ -1,5 +1,9 @@
 #   -*- mode: org; fill-column: 65 -*-
 
+#+begin_html
+<a href="/"><img src="http://orgmode.org/img/org-mode-unicorn.png" class="logo-link" /></a>
+#+end_html
+
 * Version 6.28
  :PROPERTIES:
  :VISIBILITY: content
