--- a/index.org
+++ b/index.org
@@ -102,10 +102,9 @@ The current version is 6.29c.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
-on XEmacs 21.  Emacs 22.2 ships with Org-mode version 4.67d.  Emacs
-23.1 release is expected to ship with 6.21b.  The latest CVS Emacs
-trunk usually contains a fairly recent version, but may lag a bit
-behind the website release.
+on XEmacs 21.  Emacs 22.2 ships with Org-mode version 4.67d, Emacs
+23.1 with 6.21b.  The latest CVS Emacs trunk usually contains a fairly
+recent version, but may lag a bit behind the website release.
 
 * Downloads
 
