--- a/index.org
+++ b/index.org
@@ -90,14 +90,15 @@ If you'd like to know what other people have said about Org-mode, take
 a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org]].
 
 * News
+- <2009-09-30 Wed>: Release 6.31
 - <2009-09-01 Tue>: Release 6.30
 - <2009-08-04 Tue>: Release 6.29
 - <2009-06-25 Thu>: Release 6.28
 - <2009-05-23 Sat>: Release 6.27
 
-* Current Version (6.31)
+* Current Version (6.31a)
 
-The current version is 6.31.  To see what has changed in recent
+The current version is 6.31a.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -109,7 +110,7 @@ recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.31.zip][zip file]] or [[file:org-6.31.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.31a.zip][zip file]] or [[file:org-6.31a.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
