--- a/index.org
+++ b/index.org
@@ -95,9 +95,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-09-01 Tue>: Release 6.30
 - <2009-08-04 Tue>: Release 6.29
 
-* Current Version (6.32)
+* Current Version (6.32a)
 
-The current version is 6.32.  To see what has changed in recent
+The current version is 6.32a.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -109,7 +109,7 @@ recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.32.zip][zip file]] or [[file:org-6.32.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.32a.zip][zip file]] or [[file:org-6.32a.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
