--- a/index.org
+++ b/index.org
@@ -100,9 +100,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-09-01 Tue>: Release 6.30
 - <2009-08-04 Tue>: Release 6.29
 
-* Current Version (6.33e)
+* Current Version (6.33f)
 
-The current version is 6.33e.  To see what has changed in recent
+The current version is 6.33f.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -114,7 +114,7 @@ recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.33e.zip][zip file]] or [[file:org-6.33e.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.33f.zip][zip file]] or [[file:org-6.33f.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
